--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
-export EMAIL_HOST='smtp.gmail.com'
-export EMAIL_HOST_USER='cinadhiambo22@gmail.com'
-export EMAIL_HOST_PASSWORD='brhwrioujnhujwgp'
-
-export DB_NAME='btproperties',
-export DB_USER='postgres',
-export DB_HOST='localhost',
-export DB_PASSWORD='cinadhis99',
-export DB_PORT='5432'
-
-export SECRET_KEY='ui72w51)wq5wle485gc*i=^lc1%sdp*-p225jkj(vpd#^!k7lx'
+EMAIL_HOST=smtp.gmail.com
+EMAIL_HOST_USER=cinadhiambo22@gmail.com
+EMAIL_HOST_PASSWORD=brhwrioujnhujwgp
+DB_NAME=btproperties
+DB_USER=postgres
+DB_HOST=localhost
+DB_PASSWORD=cinadhis99
+DB_PORT=5432
+SECRET_KEY=ui72w51)wq5wle485gc*i=^lc1%sdp*-p225jkj(vpd#^!k7lx
