--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ psycopg2-binary==2.8.5
 pylint==2.5.3
 pylint-django==2.0.15
 pylint-plugin-utils==0.6
+python-dotenv==0.14.0
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
